cleaning code and refactoring
