# src/main/java/com/smartchat/users/rest/users/UsersApiDelegateImpl.java
@@ -1,9 +1,11 @@
 package com.smartchat.users.rest.users;
 
 import com.smartchat.users.api.UsersApiDelegate;
+import com.smartchat.users.model.Notification;
 import com.smartchat.users.model.PresignResponse;
 import com.smartchat.users.model.User;
 import com.smartchat.users.model.UserPublic;
+import com.smartchat.users.service.notification.NotificationService;
 import com.smartchat.users.service.users.UserService;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -12,6 +14,7 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Slf4j
 @Service
@@ -19,10 +22,12 @@ public class UsersApiDelegateImpl implements UsersApiDelegate {
 
 
     private final UserService service;
+    private final NotificationService notificationService;
 
     @Autowired
-    public UsersApiDelegateImpl(UserService service) {
+    public UsersApiDelegateImpl(UserService service, NotificationService notificationService) {
         this.service = service;
+        this.notificationService = notificationService;
     }
 
     @Override
@@ -32,7 +37,7 @@ public class UsersApiDelegateImpl implements UsersApiDelegate {
             return ResponseEntity.ok(PresignResponse.builder()
                     .method(HttpStatus.CREATED.name())
                     .build());
-        } catch(Exception e){
+        } catch (Exception e) {
             return ResponseEntity.badRequest()
                     .body(PresignResponse.builder()
                             .message(e.getMessage())
@@ -46,7 +51,7 @@ public class UsersApiDelegateImpl implements UsersApiDelegate {
         try {
             User user = service.retrieveCurrentUserInformations();
             return ResponseEntity.ok(user);
-        }catch(Exception e){
+        } catch (Exception e) {
             log.error(Arrays.toString(e.getStackTrace()));
             return ResponseEntity.notFound().build();
         }
@@ -57,7 +62,7 @@ public class UsersApiDelegateImpl implements UsersApiDelegate {
         try {
             UserPublic user = service.searchUser(id);
             return ResponseEntity.ok(user);
-        }catch(Exception e){
+        } catch (Exception e) {
             return ResponseEntity.notFound().build();
         }
     }
@@ -69,12 +74,28 @@ public class UsersApiDelegateImpl implements UsersApiDelegate {
             return ResponseEntity.ok(PresignResponse.builder()
                     .method(HttpStatus.CREATED.name())
                     .build());
-        }catch(Exception e){
+        } catch (Exception e) {
             return ResponseEntity.badRequest()
                     .body(PresignResponse.builder()
                             .message(e.getMessage())
                             .method(HttpStatus.BAD_REQUEST.name())
                             .build());
         }
+    }
+
+    @Override
+    public ResponseEntity<PresignResponse> sendContactNotification(String senderuuId,
+                                                                   Notification notification) {
+        notification.setUserId(senderuuId);
+        notificationService.sendNotification(notification);
+        return ResponseEntity.ok(PresignResponse.builder()
+                .method(HttpStatus.OK.name())
+                .build());
+    }
+
+    @Override
+    public ResponseEntity<List<Notification>> showAllNotifications(String senderId){
+        List<Notification> notifications = notificationService.retrieveUserNotification(senderId);
+        return ResponseEntity.ok(notifications);
     }
 }
